src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__selection_set__check_field_arguments.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 3,
            column: 20,
            file: 0,
            builtin: false,
        },
        message: ArgumentsNotNeeded {
            kind: "field",
        },
        additional_info: [
            (
                Pos {
                    line: 3,
                    column: 16,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "user",
                },
            ),
        ],
    },
]
