src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__selection_set__duplicated_selected_field.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 3,
            column: 16,
            file: 0,
            builtin: false,
        },
        message: DuplicateSelectionName {
            name: "user",
        },
        additional_info: [],
    },
]
