src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__selection_set__invalid_nested_selection.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 20,
            file: 0,
            builtin: false,
        },
        message: SelectionOnInvalidType {
            kind: Scalar,
            name: "Int",
        },
        additional_info: [
            (
                Pos {
                    line: 0,
                    column: 0,
                    file: 0,
                    builtin: true,
                },
                DefinitionPos {
                    name: "Int",
                },
            ),
        ],
    },
]
