src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__selection_set__supports_typename_metafield.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[]
